examples/type_system/failing/180_type_adt_missing_assign.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/180_type_adt_missing_assign.flx
// error[E034]: Missing Type Definition
//
// Expected `=` after type declaration name.
//
//   examples/type_system/failing/180_type_adt_missing_assign.flx:23:15
//    |
// 23 | type Maybe<T> Some(T) | None
//    |               ^^^^
//
// Hint:
//   ADT sugar uses `type Name = Ctor(...) | Other`.
//
// Note:
//   Suppressed 1 cascading parser diagnostic(s) likely caused by an earlier syntax error.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

type Maybe<T> Some(T) | None
let after = 1
